assets/css/style.css
/*-- fonts imported from google fonts--*/
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap');

/*-- Color 
colors 
    color: #182977;
    color: #6688CC; 
    color: #ACBFE6;
    color: #F2F2F2;
--*/

html {
    overflow-x: hidden;
    
}

body {
    font-family: "Merriweather";
}

.container-wrapper {
    background-color: #ACBFE6;
    color: #6688CC;
}

/**-- general --*/
.uppercase{
    text-transform: uppercase;
}

h1,
h2,
h3,
h4,
h5 {
    margin: 10px;
}


.inline-block {
    display: inline-block;
}

/*-- Headers --*/
.page-header {
    margin-bottom: 0;
    border-bottom: 0;
    text-align: center;
}

.page-header h2 {
    margin-top: 0;

}

/*-- section divider--*/
.block-divider {
    width: 100px;
    height: 5px;
    border: 0;
    background-color: #6688CC;
}

/*-- content containers --*/
.content-container {
    padding-top: 75px;
    padding-bottom: 75px;
}

/*--callout--*/
.callout-container {
    height: 100vh; 

    background: url(../images/MS1callout.jpg) no-repeat bottom right fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; 
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;

    animation-name: callout-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}
 /*--"Whiskey Drop Project" Code Institute --*/
.opaque-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, .3);
}

.callout-outer {
    height: 100vh; 
    overflow: hidden;
}

@keyframes callout-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}

/*--about setion--*/


/*-- Navbar --*/
nav{
    background-color: #182977;
    color: #ACBFE6;
}

.navbar-container{
    position: absolute;
    top: 0;
    left: 0;
    padding-left: 0;
    padding-right: 0;
    z-index: 1;
    
}

.navbar{
    margin-bottom: 0;
    border: 0;    
    
    
}

.navbar-brand {
    font-weight: 700;
    color: 182977;
    
}


.navbar .navbar-nav a{
    font-weight: 700;
    color: #182977;
}

.navbar .navbar-toggler {
    border: 0;
}



/*-- Jumbotron --*/
.jumbotron{
    background-color: transparent;

}

.jumbotron-header {
    color: #182977;
    font-weight: 700;
    margin-top: 30px;
    margin-bottom: 30px;
}

.jumbotron-subhead {
    color: #182977;

}

/*-- quotes --*/


/*-- about--*/
#about-img1 {
    height: 100px;
    width: 75%;
}

/*--Team--*/
.team-member{
    margin-top: 10px;
    margin-bottom: 20px;
}
.team-items {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.team-fig-caption {
    color: #6688CC;
    text-align: justify;
}

small {
    color: #6688CC;
}


/*-- sessions --*/
#sessions-img {
    align-items: center;
}

.sessions-card{
    background-color: #ACBFE6;
    color: #182977;
}

.sessions-list{
    text-align: center;
    list-style-position: inside;
}

.card-title-sessions {
    font-weight: 700;
}


/*-- gallery --*/
.gallery-container{
    position: relative;
    align-items: center;
    justify-content: center;
}

.gallery-grid {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: repeat(12, 5vw);
    grid-gap: 20px;
    column-gap: 0px;
    row-gap: 0px;
    margin: 20px;  
}

.gallery-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.galleryimg1 {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 4;

}

.galleryimg2 {
    grid-column-start: 3;
    grid-column-end: 6;
    grid-row-start: 1;
    grid-row-end: 4;
}

.galleryimg3 {
    grid-column-start: 6;
    grid-column-end: 7;
    grid-row-start: 1;
    grid-row-end: 4;
}
.galleryimg4 {
    grid-column-start: 7;
    grid-column-end: 8;
    grid-row-start: 1;
    grid-row-end: 4;
}

.galleryimg5 {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 4;
    grid-row-end: 10;
}

.galleryimg6 {
    grid-column-start: 3;
    grid-column-end: 5;
    grid-row-start: 4;
    grid-row-end: 8;
}

.galleryimg7 {
    grid-column-start: 5;
    grid-column-end: 8;
    grid-row-start: 4;
    grid-row-end: 8;
}

.galleryimg8 {
    grid-column-start: 3;
    grid-column-end: 8;
    grid-row-start: 8;
    grid-row-end: 10;
}

@media screen and (max-width: 400px) {
  .gallery div { margin: 0; }
  .gallery { padding: 0; }
  
}

/*--contactus --*/
.bg-color-contact {
    background-color: #ACBFE6;
}

.contact-heading {
    margin-top: 25px;
    margin-bottom: 25px;
}

.maps-heading {
    margin-top: 25px;
    margin-bottom: 25px;
}

.contact-form {
    padding-top: 10;
    margin: 0 auto;
    position: relative;
}

.maps-location {
    padding-top: 10;
    text-align: center;
}

form{
    padding-top: 10px;
    margin-left: 20px;
    
}

.location-map {
    padding-top: 10px;
    margin-left: 20px;
    margin-right: 20px;
}

.center-block {
    padding-top: 12px;
    margin: 0 auto;
}
/*-- footer--*/
footer {
    background-color: #182977;
    color: #F2F2F2;
    min-height: 120px;
    margin: 0;
    padding-top: 15px;
}

.social-links {
    padding-bottom: 15px;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 18px;
    line-height: 7px;
    text-align: center;
    color: #f2f2f2;
}

#footer-details {
    padding: 25px;
}

/*-- Buttons --*/
.btn-cta {
    font-weight: 700;
    border-radius: 25px;
    width: 200px;
}

.btn-blues {
    color: #ACBFE6;
    background-color: #182977; 
    margin-top: 10px;
    margin-bottom: 20px;
}
 /*--need to fix--*/
.btn--yellow:hover,
.btn--yellow:active,
.btn--yellow:focus,
.btn--yellow:active:focus {
    background-color: rgba(255, 255, 128, .5);
    border-color: rgba(255, 255, 128, .5);
}

